Rename CMakeLists case.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 project(DictX)
 add_executable(com_substr_search com_substr_search.cpp)
+add_executable(dastrie dastrie.cpp)
